syntax = "proto3";

package capbac;

option java_package = "com.example.testapp";
option java_multiple_files = true;

service CapBacService {
    rpc GetListCapBac (GetListCapBacRequest) returns (GetListCapBacResponse);
    rpc SaveCapBac (SaveCapBacRequest) returns (SaveCapBacResponse);
    rpc DeleteCapBac (DeleteCapBacRequest) returns (DeleteCapBacResponse);
    rpc GetCapBac (GetCapBacRequest) returns (GetCapBacResponse);
    rpc Search (SearchRequest) returns (SearchResponse);
}

message GetListCapBacRequest{

}

message GetListCapBacResponse{
    repeated DanhMucCapBac Items = 1;
    bool Success = 4;
    string Message = 6;
}

message SaveCapBacRequest{
    DanhMucCapBac Item = 1;
    bool IsNew = 2;
}

message SaveCapBacResponse{
    bool Success = 1;
    string Message = 2;
    string MessageException = 3;
}

message DeleteCapBacRequest{
    string Id = 1;
}

message DeleteCapBacResponse{
    bool Success = 1;
    string Message = 2;
    string MessageException = 3;
}

message GetCapBacRequest{
    string Id = 1;
}

message GetCapBacResponse{
    DanhMucCapBac Item = 1;
    bool Success = 2;
    string Message = 3;
    string MessageException = 4;
}

message SearchRequest {
    string Id = 1;
    string Name = 2;
    int32 Ordering = 3;
}

message SearchResponse {
    repeated DanhMucCapBac Items = 1;
    bool Success = 2;
    string Message = 3;
    string MessageException = 4;
}


message DanhMucCapBac{
    string Id = 1;
    string Name = 2;
    int32 Ordering = 3;
}

